@@ -1,3 +1,8 @@
+2007-12-14  Pat Thoyts <patthoyts@users.sourceforge.net>
+
+	* win/nmakehlp.c:  Support compilation with MSVC9 for AMD64.
+	* win/makefile.vc:
+
 2007-12-13  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>
 
 	*** 8.5.0 TAGGED FOR RELEASE ***
